--- a/package.xml
+++ b/package.xml
@@ -9,17 +9,7 @@
         </description>
 
         <!-- Hauptbild -->
-        <image src='URL_OPT_DIR/quiqqer/quiqqer/bin/quiqqer_logo.png'/>
-
-         <!-- More preview images
-        <preview>
-            <image src="URL_OPT_DIR/quiqqer/quiqqer/bin/preview/1.png"/>
-            <image src="URL_OPT_DIR/quiqqer/quiqqer/bin/preview/2.png"/>
-            <image src="URL_OPT_DIR/quiqqer/quiqqer/bin/preview/3.png"/>
-            <image src="URL_OPT_DIR/quiqqer/quiqqer/bin/preview/4.png"/>
-            <image src="URL_OPT_DIR/quiqqer/quiqqer/bin/preview/5.png"/>
-        </preview>
-        -->
+        <image src='URL_OPT_DIR/quiqqer/demodata/bin/img/store/logo.jpg'/>
 
     </package>
 </quiqqer>
